[project]
name = "job-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.5",
    "openai>=2.38.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
]
